php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55394 Patch to suppress initialization warnings in html.c
Submitted: 2011-08-10 20:41 UTC Modified: 2011-08-31 05:47 UTC
From: sixd@php.net Assigned: cataphract (profile)
Status: Closed Package: Strings related
PHP Version: 5.4SVN-2011-08-10 (SVN) OS: All
Private report: No CVE-ID: None
 [2011-08-10 20:41 UTC] sixd@php.net
Description:
------------
This patch suppresses the .h related initialization warnings when compiling html.c


Patches

html_table_gen.php.diff (last revision 2011-08-10 20:42 UTC by a at example dot com)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-08-10 22:06 UTC] sixd@php.net
1. The copyright year of the generated file should be changed to the date the script is run

2. The PHP bundling instructions probably need to be updated with instructions to regenerate the .h file
 [2011-08-10 22:08 UTC] sixd@php.net
-Assigned To: +Assigned To: cataphract
 [2011-08-31 05:44 UTC] cataphract@php.net
Automatic comment from SVN on behalf of cataphract
Revision: http://svn.php.net/viewvc/?view=revision&revision=315846
Log: - Less GCC warnings; code less readable, yay!
- Fixed html_tables.h generaration in 64-bit archs.
- Closes bug #55394 - Patch to suppress initialization warnings in html.c
#signed/unsigned mismatches for another day
#regenerated tables on another commit
 [2011-08-31 05:47 UTC] cataphract@php.net
-Status: Assigned +Status: Closed
 [2011-08-31 05:47 UTC] cataphract@php.net
Thanks.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 00:00:02 2026 UTC