- Less GCC warnings; code less readable, yay! - Fixed html_tables.h generaration in 64-bit archs. - Closes bug #55394 - Patch to suppress initialization warnings in html.c #signed/unsigned mismatches for another day #regenerated tables on another commit